Change in Style

--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -11,39 +11,35 @@
 		</div>
 
 		<div class="row post-submit-field-type">
-			<div class="col-md-10 col-md-push-1">
-				<div class="row">
-				<div class="col-md-6 col-sm-6 col-xs-6">
-					<a data-role="button" data-val="1" class="select-change post-submit-field-type-button activato">
-						<div class="post-submit-field-type-button-icon">
-							<i class="fa fa-link"></i>
-						</div>
-						<div class="post-submit-field-type-button-legend">
-							<span class="post-submit-field-type-button-title">
-								LINK
-							</span>
-							<span class="post-submit-field-type-button-description">
-								Submit a Link
-							</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-6 col-sm-6 col-xs-6">
-					<a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
-						<div class="post-submit-field-type-button-icon">
-							<i class="fa fa-file-text-o"></i>
-						</div>
-						<div class="post-submit-field-type-button-legend">
-							<span class="post-submit-field-type-button-title">
-								TEXT
-							</span>
-							<span class="post-submit-field-type-button-description">
-								I'll write a nice article
-							</span>
-						</div>
-					</a>
-				</div>
-				</div>
+			<div class="col-md-6 col-sm-6 col-xs-6">
+				<a data-role="button" data-val="1" class="select-change post-submit-field-type-button activato">
+					<div class="post-submit-field-type-button-icon">
+						<i class="fa fa-link"></i>
+					</div>
+					<div class="post-submit-field-type-button-legend">
+						<span class="post-submit-field-type-button-title">
+							LINK
+						</span>
+						<span class="post-submit-field-type-button-description">
+							I want to share a link
+						</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-6 col-sm-6 col-xs-6">
+				<a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
+					<div class="post-submit-field-type-button-icon">
+						<i class="fa fa-file-text-o"></i>
+					</div>
+					<div class="post-submit-field-type-button-legend">
+						<span class="post-submit-field-type-button-title">
+							TEXT
+						</span>
+						<span class="post-submit-field-type-button-description">
+							I'll write a nice article
+						</span>
+					</div>
+				</a>
 			</div>
 		</div>
 
