tiny tweak to contrats of dialog

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -13,7 +13,7 @@ $color_downvote: #74a4ff
 $color_danger: #dd4b39
 $color_success: #d5d644
 
-$color_background_dialog: darken($color_background, 1%)
+$color_background_dialog: $color_background
 
 $font_body: 'Open Sans', Verdana, Arial, Helvetica, sans-serif
 $font_headings: 'Oxygen', 'Lucida Sans', 'Lucida Grande', sans-serif
