Style tweak for embedded tweets

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -653,8 +653,9 @@ blockquote
 
 		&#twitter-widget-0, &.twitter-tweet, &.twitter-tweet-rendered
 			border: none !important
-			margin: 0 15px 25px 75px !important
-			width: 90% !important
+			margin: 0 !important
+			padding: 0 15px 0 75px !important
+			width: 100% !important
 			min-height: initial !important
 			max-height: initial !important
 			+media-xs
