Minor tweak to embedded tweets style

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -656,6 +656,7 @@ blockquote
 			margin: 0 !important
 			padding: 0 15px 0 75px !important
 			width: 100% !important
+			background-color: white
 			min-height: initial !important
 			max-height: initial !important
 			+media-xs
@@ -1034,7 +1035,7 @@ blockquote
 				+text-shadow-none
 				&:hover
 					background-color: white
-					color: rgba($color_brand_main, 5%)
+					color: rgba($color_brand_main, .05)
 				& i
 					position: relative
 					top: 5px
