--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -654,7 +654,7 @@ blockquote
 		&#twitter-widget-0, &.twitter-tweet, &.twitter-tweet-rendered
 			border: none !important
 			margin: 0 !important
-			padding: 0 15px 0 75px !important
+			padding: 0 0 0 75px !important
 			width: 100% !important
 			background-color: white
 			min-height: initial !important
