--- a/blender-today/src/jade/posts/index.jade
+++ b/blender-today/src/jade/posts/index.jade
@@ -145,14 +145,16 @@ meta(property="og:image", content="{{ url_for('static', filename='images/favicon
 						a(title="Upvote, click again to undo",
 							href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}",
 							class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}")
-							i.fa.fa-angle-up
+							i.fa.fa-angle-up.hidden-xs
+							i.fa.fa-arrow-circle-up.visible-xs
 
 						span.middle {{post.rating_delta}}
 
 						a(title="Downvote, click again to undo",
 							href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}",
 							class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}")
-							i.fa.fa-angle-down
+							i.fa.fa-angle-down.hidden-xs
+							i.fa.fa-arrow-circle-down.visible-xs
 
 
 					// Post Circle Thingie
@@ -217,7 +219,7 @@ meta(property="og:image", content="{{ url_for('static', filename='images/favicon
 							span.visible-xs
 								| {{post.comments_count}}
 								i.fa.fa-comments-o
-
+								span.separator
 							| {% endif %}
 
 						span.separator.hidden-xs
