Minor style tweaks for mobile

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -254,7 +254,7 @@ blockquote
 		float: left
 		font-size: 1.2em
 		width: 100%
-		padding: 15px 10px 5px 10px
+		padding: 10px 10px 10px 10px
 		line-height: 1.2em
 		color: $color_brand_main
 		font-weight: 500
@@ -299,9 +299,9 @@ blockquote
 	+media-xs
 		font-size: 0.8em
 		width: 100%
-		padding: 15px 10px 10px 95px
+		padding: 8px 10px 10px 95px
 		float: right
-		border-top: thin solid lighten($color_text, 70%)
+		//border-top: thin solid lighten($color_text, 65%)
 		position: relative
 		+text-overflow-ellipsis
 
@@ -405,7 +405,7 @@ blockquote
 		width: 85px
 		float: left
 		position: absolute
-		bottom: -3px
+		bottom: -4px
 		left: 2px
 		font-size: 1em
 
