Minor tweak for long titles on mobile

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -253,11 +253,12 @@ blockquote
 	+media-xs
 		float: left
 		font-size: 1.2em
-		width: 100%
+		width: 98%
 		padding: 10px 10px 10px 10px
 		line-height: 1.2em
 		color: $color_brand_main
 		font-weight: 500
+		overflow-x: hidden
 		+text-shadow-none
 
 	+media-sm
